bugFix(portfolio):fixed directions to use UnixTimeStamp correctly

--- a/views/freecodecamp/unixTimeStamp.ejs
+++ b/views/freecodecamp/unixTimeStamp.ejs
@@ -48,9 +48,9 @@
 					<div class="exampleUsageContainer">
 						<h2>Example Usage</h2>
 						<ul>
-						    <li><div><span class='bg-info'>https://timestamp-microservice-rawlejuglal.c9users.io//December%2015,%202015</span></div>
+						    <li><div><span class='bg-info'>www.rawlejuglal.me/freecodecamp/convert/December 15 2015</span></div>
 						<div><span class='bg-warning'>Make sure to leave space between month & day and day & year</span></div></li>
-						    <li><div><span class='bg-info'>https://timestamp-microservice-rawlejuglal.c9users.io//1450137600</span></div></li>
+						    <li><div><span class='bg-info'>www.rawlejuglal.me/freecodecamp/convert/1450137600</span></div></li>
 						</ul>
 					</div><!--End of exampleUsageContainer-->
 				</div><!--End of col-xs-12-->
@@ -59,7 +59,7 @@
 				<div class="col-xs-12">
 					<div class="exampleOutputContainer">
 						<h2>Example Output</h2>
-						<div><span class='bg-info'>{ "unix": 1450137600, "natural": "December 15, 2015" }</span></div>
+						<div><span class='bg-info'>{ "unix": "1450137600", "natural": "December 15 2015" }</span></div>
 					</div><!--End of exampleOutputContainer-->
 				</div><!--End of col-xs-12-->
 			</div><!--End of row-->
